[sc-8189] New pricing modifications

--- a/apps/dashboard/src/app/account/billing/subscriptions/deprecated-subscriptions.component.html
+++ b/apps/dashboard/src/app/account/billing/subscriptions/deprecated-subscriptions.component.html
@@ -305,6 +305,7 @@
           class="on-premise"
           [innerHTML]="'billing.on_premise_cost' | translate"></div>
       </div>
+      <div>{{ 'billing.prices_vat' | translate }}</div>
     </div>
   }
 }
