--- a/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
+++ b/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
@@ -194,7 +194,10 @@
           </div>
         </ng-template>
       </table>
-      <div class="notes">* {{ 'billing.search-endpoints' | translate }}</div>
+      <div class="notes">
+        <div>* {{ 'billing.search-endpoints' | translate }}</div>
+        <div>{{ 'billing.prices_vat' | translate }}</div>
+      </div>
     }
   }
 }
