[sc-8108] Fix load more results in widget generator page
In the Search Result widget, we were loading more results on scroll but listening only the document. So load more didn't work when the scrollable container was another block of the page.

We added an optional attribute `scrollableContainerSelector` on nuclia-search-results, allowing to specify the query selector of the scrollable block if any.

--- a/libs/common/src/lib/widgets/widget-generator.component.scss
+++ b/libs/common/src/lib/widgets/widget-generator.component.scss
@@ -138,7 +138,7 @@
       max-width: calc(100vw - #{$width-sidenav} - #{$width-config-panel} - #{$gap-page-content});
 
       h4 {
-        margin: rhythm(1.5) 0 rhythm(1);
+        margin: rhythm(1.5) rhythm(1) 0 rhythm(1);
       }
 
       .preview-content {
@@ -147,7 +147,7 @@
         gap: rhythm(2);
         height: $content-height;
         overflow: auto;
-        padding: rhythm(2) $padding-right-page rhythm(4) 0;
+        padding: rhythm(2) $padding-right-page rhythm(4) rhythm(1);
       }
 
       &.dark-mode .preview-content {
