--- a/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
+++ b/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
@@ -1,114 +1,125 @@
-<div
-  class="label-set-editor"
-  *ngIf="labelSet">
-  <h1>{{ (addNew ? 'label-set.add' : 'label-set.edit') | translate }}</h1>
-
-  <div class="scrollable-container">
-    <div class="form-container">
-      <form [formGroup]="labelSetForm">
-        <div class="form-section-container">
-          <label
-            class="title-xxs"
-            for="title">
-            {{ 'label-set.form.name' | translate }}
-          </label>
+@if (labelSet) {
+  <div class="label-set-editor">
+    <div class="scrollable-container">
+      <div class="form-container">
+        <form [formGroup]="labelSetForm">
           <pa-input
             id="title"
             formControlName="title"
-            externalLabel
+            data-cy="label-set-title-input"
             [showAllErrors]="false"
-            [errorMessages]="validationMessages['title']"></pa-input>
-        </div>
+            [errorMessages]="validationMessages['title']">
+            {{ 'label-set.form.name' | translate }}
+          </pa-input>
 
-        <div class="form-section-container">
-          <label class="title-xxs">
-            {{ 'generic.color' | translate }}
-          </label>
-          <app-color-picker
-            [hexColors]="colors"
-            [value]="labelSet.color"
-            (valueChange)="setColor($event)"></app-color-picker>
-        </div>
-
-        <div
-          class="form-section-container"
-          [class.align-top]="addNew">
-          <label class="title-xxs">
-            {{ 'label-set.form.kind' | translate }}
-          </label>
-
-          <div>
-            <pa-radio-group formControlName="kind">
-              <pa-radio
-                *ngFor="let kind of kinds | async"
-                [value]="kind.id"
-                [disabled]="!addNew">
-                {{ kind.name | translate }}
-              </pa-radio>
-            </pa-radio-group>
-            <div
-              *ngIf="addNew"
-              class="warning">
-              <pa-icon name="warning"></pa-icon>
-              {{ 'label-set.form.kind-warning' | translate }}
+          @if (addNew) {
+            <div>
+              <label class="title-xxs">
+                {{ 'label-set.form.kind' | translate }}
+              </label>
+              <pa-radio-group formControlName="kind">
+                @for (kind of kinds | async; track kind.id) {
+                  <pa-radio
+                    [value]="kind.id"
+                    [disabled]="!addNew">
+                    {{ kind.name | translate }}
+                  </pa-radio>
+                }
+              </pa-radio-group>
+              <div class="warning">
+                <pa-icon name="warning"></pa-icon>
+                {{ 'label-set.form.kind-warning' | translate }}
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="form-section-container align-top">
-          <label class="title-xxs">
-            {{ 'label-set.form.exclusive' | translate }}
-          </label>
+          }
+
           <div>
-            <div class="multiple-description">{{ 'label-set.form.exclusive-description' | translate }}</div>
-            <pa-checkbox formControlName="exclusive">
-              {{ 'label-set.form.exclusive-checkbox' | translate }}
+            <label class="title-xxs">
+              {{ 'label-set.form.exclusive.label' | translate }}
+            </label>
+            <pa-checkbox
+              formControlName="exclusive"
+              help="label-set.form.exclusive.description">
+              {{ 'label-set.form.exclusive.checkbox' | translate }}
             </pa-checkbox>
           </div>
-        </div>
-      </form>
 
-      <div class="form-section-container align-top">
-        <label class="title-xxs">
-          {{ 'label-set.form.labels.title' | translate }}
-        </label>
-        <div>
-          <div>{{ 'label-set.form.labels-description' | translate }}</div>
-          <div
-            class="label-list"
-            cdkDropList
-            (cdkDropListDropped)="drop($event)">
-            <app-label
-              *ngFor="let title of labelOrder; let i = index"
-              [label]="labelSet.getLabel(title)"
-              [existingTitles]="labelOrder"
-              (deleteLabel)="deleteLabel(title)"
-              (titleChange)="modifyLabel(title, $event)"
-              cdkDrag></app-label>
+          <div class="label-list">
+            <div class="label-list-title">
+              <label
+                class="title-xxs"
+                for="label-list">
+                {{ 'label-set.form.labels.title' | translate }}
+              </label>
+
+              <div class="label-display-buttons">
+                <pa-button
+                  [aspect]="labelView === 'list' ? 'solid' : 'basic'"
+                  data-cy="list-view"
+                  size="small"
+                  icon="list-bullet"
+                  (click)="labelView = 'list'"></pa-button>
+                <pa-button
+                  [aspect]="labelView === 'grid' ? 'solid' : 'basic'"
+                  data-cy="grid-view"
+                  size="small"
+                  icon="grid"
+                  (click)="labelView = 'grid'"></pa-button>
+              </div>
+            </div>
+            <div>
+              @if (labelView === 'list') {
+                <pa-textarea
+                  externalLabel
+                  id="label-list"
+                  help="label-set.form.labels.list-help"
+                  resizable
+                  formControlName="labels"
+                  data-cy="label-list-input"
+                  [rows]="2"></pa-textarea>
+              } @else {
+                <pa-input
+                  externalLabel
+                  help="label-set.form.labels.grid-help"
+                  data-cy="label-item-input"
+                  [errorMessage]="labelInputError"
+                  [(value)]="labelInputValue"
+                  (enter)="addLabel($event.value)"></pa-input>
+
+                <div
+                  class="label-grid"
+                  data-cy="label-grid">
+                  @for (label of labelSet.labels; track label.title) {
+                    <nsi-label
+                      [color]="labelSet.color"
+                      (removeLabel)="deleteLabel(label.title)">
+                      {{ label.title }}
+                    </nsi-label>
+                  }
+                </div>
+              }
+            </div>
           </div>
-          <app-label
-            noHandle
-            [existingTitles]="labelOrder"
-            (titleChange)="addLabel($event)"></app-label>
-        </div>
+        </form>
       </div>
     </div>
-  </div>
 
-  <footer class="form-section-container">
-    <div class="footer-placeholder"></div>
-    <div class="button-container">
-      <pa-button
-        kind="primary"
-        data-cy="save-label-set"
-        (click)="saveLabelSet()"
-        [disabled]="labelSetForm.invalid || !hasChanges || !labelSet.labels?.length">
-        {{ 'generic.save' | translate }}
-      </pa-button>
-      <pa-button
-        aspect="basic"
-        routerLink="..">
-        {{ 'generic.cancel' | translate }}
-      </pa-button>
-    </div>
-  </footer>
-</div>
+    <footer class="form-section-container">
+      <div class="footer-placeholder"></div>
+      <div class="button-container">
+        <pa-button
+          kind="primary"
+          data-cy="save-label-set"
+          (click)="saveLabelSet()"
+          [disabled]="labelSetForm.invalid || !hasChanges || !labelSet.labels?.length">
+          {{ 'generic.save' | translate }}
+        </pa-button>
+        <pa-button
+          aspect="basic"
+          routerLink="..">
+          {{ 'generic.cancel' | translate }}
+        </pa-button>
+      </div>
+    </footer>
+  </div>
+}
