--- a/libs/common/src/lib/select-account-kb/select-account/select-account.component.html
+++ b/libs/common/src/lib/select-account-kb/select-account/select-account.component.html
@@ -7,37 +7,41 @@
     </div>
     <div
       class="select-content"
+      [class.select-kb-visible]="selectKb"
       [@slideInOut]="selectKb">
-      <div
-        class="select-account"
-        *ngIf="!selectKb">
-        <div class="select-account-list">
-          <div
-            class="select-account-item"
-            *ngFor="let account of accounts | async">
-            <a
-              class="account"
-              [routerLink]="'/select/' + account.slug"
-              (click)="selectAccount(account)">
-              {{ account.title }}
-              <pa-icon
-                class="account-arrow"
-                name="chevron-right"
-                size="small"></pa-icon>
-            </a>
+      @if (!selectKb) {
+        <div class="select-account">
+          <div class="select-account-list">
+            @for (account of accounts | async; track account.id) {
+              <div class="select-account-item">
+                <a
+                  class="account"
+                  [routerLink]="'/select/' + account.slug"
+                  (click)="selectAccount(account)">
+                  {{ account.title }}
+                  <pa-icon
+                    class="account-arrow"
+                    name="chevron-right"
+                    size="small"></pa-icon>
+                </a>
+              </div>
+            }
           </div>
+          @if (!standalone) {
+            <div class="select-account-footer">
+              <pa-button
+                aspect="basic"
+                (click)="logout()">
+                {{ 'user.logout' | translate }}
+              </pa-button>
+            </div>
+          }
         </div>
-        <div
-          class="select-account-footer"
-          *ngIf="!standalone">
-          <pa-button
-            aspect="basic"
-            (click)="logout()">
-            {{ 'user.logout' | translate }}
-          </pa-button>
-        </div>
+      }
+
+      <div class="outlet-container">
+        <router-outlet></router-outlet>
       </div>
-      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
