--- a/libs/common/src/lib/select-account-kb/select-account/select-account.component.scss
+++ b/libs/common/src/lib/select-account-kb/select-account/select-account.component.scss
@@ -1,24 +1,23 @@
 @import 'apps/dashboard/src/variables';
+@import '../select-account.tokens';
 
 .select {
+  background-color: $color-light-stronger;
+  border-radius: rhythm(1);
+  margin: 0 auto;
+  max-height: $height-page-container;
+  padding: $vertical-padding rhythm(12);
   position: relative;
   top: 10vh;
   width: 600px;
-  height: 80vh;
-  margin: 0 auto;
-  padding: rhythm(8) rhythm(12);
-  border-radius: rhythm(1);
-  background-color: $color-light-stronger;
 
   .select-container {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
   }
 
   .logo {
-    margin-bottom: rhythm(8);
+    margin-bottom: $vertical-padding;
     text-align: center;
 
     img {
@@ -28,26 +27,38 @@
   }
   .select-content {
     flex: 1 1 auto;
-    min-height: 0; // Show scrollbar if content overflow
+    height: fit-content;
+    transition: height $transition-response;
+
+    .outlet-container {
+      opacity: 0;
+    }
+
+    &.select-kb-visible .outlet-container {
+      opacity: 1;
+      transition: opacity $duration-superfast 350ms;
+    }
   }
 }
 
 .select-account {
   height: 100%;
+  transition: height $transition-hint;
 
   .select-account-list {
+    max-height: calc(#{$height-page-container} - #{$vertical-padding} * 4 - #{rhythm(5)});
     overflow-y: auto;
     overflow-x: hidden;
     @include scrollbar-black();
     // Move scrollbar to the edge
-    padding: 0 rhythm(12);
-    margin: 0 -#{rhythm(12)};
+    padding: 0 rhythm(2);
+    margin: 0 -#{rhythm(2)};
   }
 
   .select-account-footer {
     display: flex;
     justify-content: center;
-    margin-top: rhythm(8);
+    margin-top: rhythm(7);
   }
 
   .select-account-item:not(:last-child) {
@@ -64,7 +75,9 @@
     justify-content: center;
     position: relative;
     text-decoration: none;
-    transition: background-color $transition-hint, color $transition-hint;
+    transition:
+      background-color $transition-hint,
+      color $transition-hint;
     width: 100%;
 
     .account-arrow {
