--- a/libs/common/src/lib/widgets/copilot/copilot-modal.component.scss
+++ b/libs/common/src/lib/widgets/copilot/copilot-modal.component.scss
@@ -3,5 +3,14 @@
 form {
   display: flex;
   flex-direction: column;
-  gap: rhythm(1.5);
+  gap: rhythm(2);
+
+  .description {
+    margin-bottom: rhythm(2);
+  }
+
+  .generate-button {
+    align-self: flex-end;
+    margin-bottom: rhythm(1);
+  }
 }
