[sc-8106] Render the resource title as link in resource list
In resource list, we created a new `title-cell` component because all the resource tables (processed, pending and error) are sharing the same code for the title cell.

Now the resource title is a real link (but we kept the same style, except it is underlined on hover), so we can easily open it on a new tab. Clicking anywhere else on the title cell is still navigating to the resource on the same tab as it used to.

--- a/libs/common/src/lib/resources/resource-list/error-resources-table/error-resources-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/error-resources-table/error-resources-table.component.html
@@ -88,34 +88,7 @@
           <pa-table-cell
             clickable
             (click)="onClickTitle(row.resource)">
-            <div class="title-with-icon">
-              @if (row.resource.icon | mimeIcon; as icon) {
-                <pa-icon [name]="icon"></pa-icon>
-              }
-              <div class="title-and-description">
-                <div
-                  class="body-s"
-                  data-cy="resource-title">
-                  {{ row.resource.title }}
-                </div>
-                @if (row.description) {
-                  <small
-                    class="body-xs"
-                    data-cy="resource-description">
-                    {{ row.description }}
-                  </small>
-                }
-              </div>
-              <div class="title-status">
-                @if (row.resource.metadata?.status === 'PENDING') {
-                  <pa-icon name="clock-dash"></pa-icon>
-                } @else if (row.resource.metadata?.status === 'ERROR') {
-                  <pa-icon
-                    class="error"
-                    name="warning"></pa-icon>
-                }
-              </div>
-            </div>
+            <stf-title-cell [row]="row"></stf-title-cell>
           </pa-table-cell>
 
           <pa-table-cell center>
