--- a/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
+++ b/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
@@ -8,7 +8,7 @@
             formControlName="title"
             data-cy="label-set-title-input"
             [showAllErrors]="false"
-            [errorMessages]="validationMessages['title']">
+            [errorMessages]="validationMessages.title">
             {{ 'label-set.form.name' | translate }}
           </pa-input>
 
@@ -76,6 +76,7 @@
                   resizable
                   formControlName="labels"
                   data-cy="label-list-input"
+                  [errorMessages]="validationMessages.labels"
                   [rows]="2"></pa-textarea>
               } @else {
                 <pa-input
@@ -84,8 +85,8 @@
                   data-cy="label-item-input"
                   [errorMessage]="labelInputError"
                   [(value)]="labelInputValue"
+                  (valueChange)="this.labelInputError = ''"
                   (enter)="addLabel($event.value)"></pa-input>
-
                 <div
                   class="label-grid"
                   data-cy="label-grid">
