Fix [sc-8234]: Save button behavior for Label set creation

--- a/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
+++ b/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
@@ -70,6 +70,7 @@
             <div>
               @if (labelView === 'list') {
                 <pa-textarea
+                  #labelList
                   externalLabel
                   id="label-list"
                   help="label-set.form.labels.list-help"
@@ -77,7 +78,8 @@
                   formControlName="labels"
                   data-cy="label-list-input"
                   [errorMessages]="validationMessages.labels"
-                  [rows]="2"></pa-textarea>
+                  [rows]="2"
+                  (keyup.enter)="validateLabelList($event)"></pa-textarea>
               } @else {
                 <pa-input
                   externalLabel
