Some style improvements

--- a/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.scss
+++ b/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.scss
@@ -55,7 +55,7 @@
     display: flex;
     gap: rhythm(2);
     justify-content: center;
-    padding: rhythm(3) 0 rhythm(6);
+    padding: rhythm(6) 0;
   }
 
   .kb {
