[sc-8240] Add zone in kb settings form

--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -14,6 +14,12 @@
           </pa-input>
 
           <pa-input
+            formControlName="zone"
+            readonly>
+            {{ 'generic.zone' | translate }}
+          </pa-input>
+
+          <pa-input
             formControlName="slug"
             [errorMessages]="validationMessages['slug']">
             {{ 'generic.slug' | translate }}
