[sc-8177] SDK cleanup

--- a/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -47,7 +47,7 @@
 
       <div class="zone">
         <h4>{{ 'generic.zone' | translate }}</h4>
-        <p>{{ 'account.db_zone_description' | translate }}</p>
+        <p>{{ 'account.nua_key_zone' | translate }}</p>
         <pa-select
           formControlName="zone"
           [readonly]="(zones || []).length <= 1"
